--- a/Nhom01_QuanLyCuaHangTienLoi/QuanLiCuaHangTienLoi_BLL/QuanLiCuaHangTienLoi_BLL.csproj
+++ b/Nhom01_QuanLyCuaHangTienLoi/QuanLiCuaHangTienLoi_BLL/QuanLiCuaHangTienLoi_BLL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietHoaDonBLL.cs" />
     <Compile Include="HoaDonBLL.cs" />
     <Compile Include="KhachHangBLL.cs" />
     <Compile Include="LoaiSanPhamBLL.cs" />
