--- a/Nhom01_QuanLyCuaHangTienLoi/QuanLiCuaHangTienLoi_DTO/QuanLiCuaHangTienLoi_DTO.csproj
+++ b/Nhom01_QuanLyCuaHangTienLoi/QuanLiCuaHangTienLoi_DTO/QuanLiCuaHangTienLoi_DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietHoaDonDTO.cs" />
     <Compile Include="HoaDonDTO.cs" />
     <Compile Include="KhacHangDTO.cs" />
     <Compile Include="LoaiSanPhamDTO.cs" />
